add-bootcamp-list & design

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,220 +1,129 @@
-.header-blue {
-    background:linear-gradient(135deg, #172a74, #21a9af);
-    background-color:#184e8e;
-    padding-bottom:80px;
-    font-family:'Source Sans Pro', sans-serif;
-  }
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
+.fa-2x {
+font-size: 2em;
+}
+.fa {
+position: relative;
+display: table-cell;
+width: 60px;
+height: 36px;
+text-align: center;
+vertical-align: middle;
+font-size:20px;
+}
+
+
+.main-menu:hover,nav.main-menu.expanded {
+width:250px;
+overflow:visible;
+}
+
+.main-menu {
+background:#212121;
+border-right:1px solid #e5e5e5;
+position:absolute;
+top:0;
+bottom:0;
+height:100%;
+left:0;
+width:60px;
+overflow:hidden;
+-webkit-transition:width .05s linear;
+transition:width .05s linear;
+-webkit-transform:translateZ(0) scale(1,1);
+z-index:1000;
+}
+
+.main-menu>ul {
+margin:7px 0;
+}
+
+.main-menu li {
+position:relative;
+display:block;
+width:250px;
+}
+
+.main-menu li>a {
+position:relative;
+display:table;
+border-collapse:collapse;
+border-spacing:0;
+color:#999;
+ font-family: arial;
+font-size: 14px;
+text-decoration:none;
+-webkit-transform:translateZ(0) scale(1,1);
+-webkit-transition:all .1s linear;
+transition:all .1s linear;
   
-  @media (min-width:768px) {
-    .header-blue {
-      padding-bottom:120px;
-    }
-  }
-  
-  .header-blue .navbar {
-    background:transparent;
-    padding-top:.75rem;
-    padding-bottom:.75rem;
-    color:#fff;
-    border-radius:0;
-    box-shadow:none;
-    border:none;
-  }
-  
-  @media (min-width:768px) {
-    .header-blue .navbar {
-      padding-top:1rem;
-      padding-bottom:1rem;
-    }
-  }
-  
-  .header-blue .navbar .navbar-brand {
-    font-weight:bold;
-    color:inherit;
-  }
-  
-  .header-blue .navbar .navbar-brand:hover {
-    color:#f0f0f0;
-  }
-  
-  .header-blue .navbar .navbar-collapse {
-    border-top:1px solid rgba(255,255,255,0.3);
-    margin-top:.5rem;
-  }
-  
-  @media (min-width:768px) {
-    .header-blue .navbar .navbar-collapse {
-      border-color:transparent;
-      margin:0;
-    }
-  }
-  
-  .header-blue .navbar .navbar-collapse span .login {
-    color:#d9d9d9;
-    margin-right:.5rem;
-    text-decoration:none;
-  }
-  
-  .header-blue .navbar .navbar-collapse span .login:hover {
-    color:#fff;
-  }
-  
-  .header-blue .navbar .navbar-toggler {
-    border-color:rgba(255,255,255,0.3);
-  }
-  
-  .header-blue .navbar .navbar-toggler:hover, .header-blue .navbar-toggler:focus {
-    background:none;
-  }
-  
-  .header-blue .navbar .navbar-nav a.active, .header-blue .navbar .navbar-nav > .show .dropdown-item {
-    background:none;
-    box-shadow:none;
-  }
-  
-  @media (min-width: 768px) {
-    .header-blue .navbar-nav .nav-link {
-      padding-left:.7rem;
-      padding-right:.7rem;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .header-blue .navbar-nav .nav-link {
-      padding-left:1.2rem;
-      padding-right:1.2rem;
-    }
-  }
-  
-  .header-blue .navbar .navbar-nav > li > .dropdown-menu {
-    margin-top:-5px;
-    box-shadow:0 4px 8px rgba(0,0,0,.1);
-    background-color:#fff;
-    border-radius:2px;
-  }
-  
-  .header-blue .navbar .dropdown-menu .dropdown-item:focus, .header-blue .navbar .dropdown-menu .dropdown-item {
-    line-height:2;
-    color:#37434d;
-  }
-  
-  .header-blue .navbar .dropdown-menu .dropdown-item:focus, .header-blue .navbar .dropdown-menu .dropdown-item:hover {
-    background:#ebeff1;
-  }
-  
-  .header-blue .action-button, .header-blue .action-button:not(.disabled):active {
-    border:1px solid rgba(255,255,255,0.7);
-    border-radius:40px;
-    color:#ebeff1;
-    box-shadow:none;
-    text-shadow:none;
-    padding:.3rem .8rem;
-    background:transparent;
-    transition:background-color 0.25s;
-    outline:none;
-  }
-  
-  .header-blue .action-button:hover {
-    color:#fff;
-  }
-  
-  .header-blue .navbar .form-inline label {
-    color:#d9d9d9;
-  }
-  
-  .header-blue .navbar .form-inline .search-field {
-    display:inline-block;
-    width:80%;
-    background:none;
-    border:none;
-    border-bottom:1px solid transparent;
-    border-radius:0;
-    color:#ccc;
-    box-shadow:none;
-    color:inherit;
-    transition:border-bottom-color 0.3s;
-  }
-  
-  .header-blue .navbar .form-inline .search-field:focus {
-    border-bottom:1px solid #ccc;
-  }
-  
-  .header-blue .hero {
-    margin-top:20px;
-    text-align:center;
-  }
-  
-  @media (min-width:768px) {
-    .header-blue .hero {
-      margin-top:60px;
-      text-align:left;
-    }
-  }
-  
-  .header-blue .hero h1 {
-    color:#fff;
-    font-size:40px;
-    margin-top:0;
-    margin-bottom:15px;
-    font-weight:300;
-    line-height:1.4;
-  }
-  
-  @media (min-width:992px) {
-    .header-blue .hero h1 {
-      margin-top:190px;
-      margin-bottom:24px;
-      line-height:1.2;
-    }
-  }
-  
-  .header-blue .hero p {
-    color:rgba(255,255,255,0.8);
-    font-size:20px;
-    margin-bottom:30px;
-    font-weight:300;
-  }
-  
-  .header-blue .phone-holder {
-    text-align:right;
-  }
-  
-  .header-blue div.iphone-mockup {
-    position:relative;
-    max-width:300px;
-    margin:20px;
-    display:inline-block;
-  }
-  
-  .header-blue .iphone-mockup img.device {
-    width:100%;
-    height:auto;
-  }
-  
-  .header-blue .iphone-mockup .screen {
-    position:absolute;
-    width:88%;
-    height:77%;
-    top:12%;
-    border-radius:2px;
-    left:6%;
-    border:1px solid #444;
-    background-color:#aaa;
-    overflow:hidden;
-    background-size:cover;
-    background-position:center;
-  }
-  
-  .header-blue .iphone-mockup .screen:before {
-    content:'';
-    background-color:#fff;
-    position:absolute;
-    width:70%;
-    height:140%;
-    top:-12%;
-    right:-60%;
-    transform:rotate(-19deg);
-    opacity:0.2;
-  }
-  
-  
+}
+
+.main-menu .nav-icon {
+position:relative;
+display:table-cell;
+width:60px;
+height:36px;
+text-align:center;
+vertical-align:middle;
+font-size:18px;
+}
+
+.main-menu .nav-text {
+position:relative;
+display:table-cell;
+vertical-align:middle;
+width:190px;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+.main-menu>ul.logout {
+position:absolute;
+left:0;
+bottom:0;
+}
+
+.no-touch .scrollable.hover {
+overflow-y:hidden;
+}
+
+.no-touch .scrollable.hover:hover {
+overflow-y:auto;
+overflow:visible;
+}
+
+a:hover,a:focus {
+text-decoration:none;
+}
+
+nav {
+-webkit-user-select:none;
+-moz-user-select:none;
+-ms-user-select:none;
+-o-user-select:none;
+user-select:none;
+}
+
+nav ul,nav li {
+outline:0;
+margin:0;
+padding:0;
+}
+.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
+color:#fff;
+background-color:#5fa2db;
+}
+.area {
+float: left;
+background: #e2e2e2;
+width: 100%;
+height: 100%;
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+}
