--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -41,7 +41,7 @@
                    
                 </li>
                 <li>
-                    <a href="#">
+                    <a routerLink="applicantList">
                         <i class="fa fa-bar-chart-o fa-2x"></i>
                         <span class="nav-text">
                             Adaylar
