add employee list

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -57,7 +57,8 @@
                     </a>
                 </li>
                 <li>
-                   <a href="#">
+                    
+                   <a routerLink="employeeList">
                        <i class="fa fa-table fa-2x"></i>
                         <span class="nav-text">
                             Çalışanlar
