--- a/src/app/components/employee/create-employee/create-employee.component.html
+++ b/src/app/components/employee/create-employee/create-employee.component.html
@@ -31,7 +31,7 @@
           <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
           <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
-          <button type="button" class="btn btn-danger mx-3">Sil</button>
+          <button type="button" class="btn btn-danger mx-3">Sill</button>
           </div>
          
         </td>
