add employee and applicant list

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -41,7 +41,7 @@
                    
                 </li>
                 <li>
-                    <a href="#">
+                    <a routerLink="applicant">
                         <i class="fa fa-bar-chart-o fa-2x"></i>
                         <span class="nav-text">
                             Adaylar
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                   <a href="#">
+                   <a routerLink="employee">
                        <i class="fa fa-table fa-2x"></i>
                         <span class="nav-text">
                             Çalışanlar
