--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <html>
   <head>
- 
+
   </head>
   <body><div class="area"></div><nav class="main-menu">
             <ul>
@@ -11,7 +11,7 @@
                             Anasayfa
                         </span>
                     </a>
-                  
+
                 </li>
                 <li class="has-subnav">
                     <a  routerLink="bootcampList">
@@ -20,7 +20,7 @@
                             Bootcamp
                         </span>
                     </a>
-                    
+
                 </li>
                 <li class="has-subnav">
                     <a href="#">
@@ -29,7 +29,7 @@
                             Başvurular
                         </span>
                     </a>
-                    
+
                 </li>
                 <li class="has-subnav">
                     <a routerLink="blacklist">
@@ -38,7 +38,7 @@
                             Kara Liste
                         </span>
                     </a>
-                   
+
                 </li>
                 <li>
                     <a routerLink="applicant">
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a routerLink="instructor">
                         <i class="fa fa-font fa-2x"></i>
                         <span class="nav-text">
                            Eğitmenler
