--- a/src/app/components/instructor/create-instructor/create-instructor.component.html
+++ b/src/app/components/instructor/create-instructor/create-instructor.component.html
@@ -1,1 +1,41 @@
-<p>create-instructor works!</p>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5">Eğitmen
+  Ekle</button>
+
+<h1 class="mt-5 mb-5" style="text-align: center;">Eğitmen Listesi</h1>
+
+<table class="table" style="margin-left: 100px;">
+  <thead>
+    <tr style="text-align:center">
+      <th scope="col">id</th>
+      <th scope="col">Adı</th>
+      <th scope="col">Soyadı</th>
+      <th scope="col">Email</th>
+      <th scope="col">Şifre</th>
+      <th scope="col">Kimlik No</th>
+      <th scope="col">Doğum Tarihi</th>
+      <th scope="col">Şirket Adı</th>
+      <th scope="col">İşlemler</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr style="text-align:center" *ngFor="let instructor of instructors">
+
+      <td>{{instructor.id}}</td>
+      <td>{{instructor.firstName}}</td>
+      <td>{{instructor.lastName}}</td>
+      <td>{{instructor.email}}</td>
+      <td>{{instructor.password}}</td>
+      <td>{{instructor.nationalIdentity}}</td>
+      <td>{{instructor.dateOfBirth}}</td>
+      <td>{{instructor.companyName}}</td>
+      <td>
+        <div>
+          <button type="button" class="btn btn-primary mx-3">Detay</button>
+          <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
+          <button type="button" class="btn btn-danger mx-3">Sil</button>
+        </div>
+
+      </td>
+    </tr>
+  </tbody>
+</table>
