app module config edit (add forms)

--- a/src/app/components/applicant/create-applicant/create-applicant.component.html
+++ b/src/app/components/applicant/create-applicant/create-applicant.component.html
@@ -1,4 +1,4 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5">Aday Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-applicant" >Aday Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Aday Listesi</h1>
 
