--- a/src/app/components/instructor/create-instructor/create-instructor.component.html
+++ b/src/app/components/instructor/create-instructor/create-instructor.component.html
@@ -1,4 +1,4 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5">Eğitmen
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-instructor">Eğitmen
   Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Eğitmen Listesi</h1>
