--- a/src/app/components/applicant/add-applicant/add-applicant.component.html
+++ b/src/app/components/applicant/add-applicant/add-applicant.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-  <button routerLink="/applicant" type="submit" class="btn btn-info mt-3" >Geri Dön</button>
+  <button routerLink="/applicant" type="submit" class="btn btn-outline-dark mt-3" >Geri Dön</button>
     <div class="row">
       
         <div class="col-md-6"></div>
         <form [formGroup]="applicantAddForm">
             <div class="mb-3">
-                <h2 class="text-center mt-3">Aday Ekle</h2>
+                <h2 class="text-center mt-2">Aday Ekle</h2>
               <label for="exampleInputEmail1" class="form-label">Ad</label>
               <input formControlName="firstName" type="text" class="form-control" placeholder="firstName" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
@@ -33,7 +33,7 @@
                 <label for="exampleInputEmail1" class="form-label">Hakkında</label>
                 <input formControlName="about" type="text" class="form-control" placeholder="about" id="exampleInputEmail1" aria-describedby="emailHelp">
               </div>
-            <button (click)="add()" type="submit" class="btn btn-info">Ekle</button>
+            <button (click)="add()" type="submit" class="btn btn-warning">Ekle</button>
             
           </form>
     </div>
