--- a/src/app/components/black-list/create-black-list/create-black-list.component.html
+++ b/src/app/components/black-list/create-black-list/create-black-list.component.html
@@ -1,4 +1,4 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5">Engelle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-blacklist">Kara Listeye Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Kara Liste</h1>
 
@@ -7,8 +7,9 @@
       <tr style="text-align:center">
         <th scope="col">Id</th>
         <th scope="col">Applicant Id</th>
-        <th scope="col">Date</th>
-        <th scope="col">Reason</th>
+        <th scope="col">Tarih</th>
+        <th scope="col">Neden</th>
+        <th scope="col">İşlemler</th>
       </tr>
     </thead>
     <tbody>
