--- a/src/app/components/employee/create-employee/create-employee.component.html
+++ b/src/app/components/employee/create-employee/create-employee.component.html
@@ -1,4 +1,4 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5">Çalışan Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-employee">Çalışan Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Çalışan Listesi</h1>
 
