--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
@@ -1,6 +1,6 @@
 
 
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5">Bootcamp Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-bootcamp">Bootcamp Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Bootcamp Listesi</h1>
 
