--- a/src/app/components/application/create-application/create-application.component.html
+++ b/src/app/components/application/create-application/create-application.component.html
@@ -1,4 +1,4 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5">Başvuru Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-application">Başvuru Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Başvurular Listesi</h1>
 
