--- a/src/app/components/employee/create-employee/create-employee.component.html
+++ b/src/app/components/employee/create-employee/create-employee.component.html
@@ -1,44 +1,45 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-employee">Çalışan Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5"
+  routerLink="/add-employee">Çalışan Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Çalışan Listesi</h1>
 
 <table class="table" style="margin-left: 100px;">
-    <thead>
-      <tr style="text-align:center">
-        <th scope="col">id</th>
-        <th scope="col">Adı</th>
-        <th scope="col">Soyadı</th>
-        <th scope="col">Email</th>
-        <th scope="col">Şifre</th>
-        <th scope="col">Kimlik No</th>
-        <th  scope="col">Doğum Tarihi</th>
-        <th  scope="col">Pozisyon</th>
-        <th  scope="col">İşlemler</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr style="text-align:center" *ngFor= "let employee of employees">
+  <thead>
+    <tr style="text-align:center">
+      <th scope="col">id</th>
+      <th scope="col">Adı</th>
+      <th scope="col">Soyadı</th>
+      <th scope="col">Email</th>
+      <th scope="col">Şifre</th>
+      <th scope="col">Kimlik No</th>
+      <th scope="col">Doğum Tarihi</th>
+      <th scope="col">Pozisyon</th>
+      <th scope="col">İşlemler</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr style="text-align:center" *ngFor="let employee of employees">
 
-        <td>{{employee.id}}</td>
-        <td>{{employee.firstName}}</td>
-        <td>{{employee.lastName}}</td>
-        <td>{{employee.email}}</td>
-        <td>{{employee.password}}</td>
-        <td>{{employee.nationalIdentity}}</td>
-        <td>{{employee.dateOfBirth}}</td>
-        <td>{{employee.position}}</td>
-        <td>
-          <div>
+      <td>{{employee.id}}</td>
+      <td>{{employee.firstName}}</td>
+      <td>{{employee.lastName}}</td>
+      <td>{{employee.email}}</td>
+      <td>{{employee.password}}</td>
+      <td>{{employee.nationalIdentity}}</td>
+      <td>{{employee.dateOfBirth}}</td>
+      <td>{{employee.position}}</td>
+      <td>
+        <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
           <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
-          <button type="button" class="btn btn-danger mx-3">Sill</button>
-          </div>
+          <button type="button" class="btn btn-danger mx-3" (click)="delete(employee)">Sil</button>
+        </div>
 
-        </td>
-      </tr>
-
-
+      </td>
+    </tr>
 
 
-    </tbody>
-  </table>
+
+
+  </tbody>
+</table>
