--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
@@ -29,7 +29,7 @@
           <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
           <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
-          <button type="button" class="btn btn-danger mx-3">Sil</button>
+          <button type="button" class="btn btn-danger mx-3" (click)="delete(bootcamp)">Sil</button>
           </div>
          
         </td>
