--- a/src/app/components/applicant/create-applicant/create-applicant.component.html
+++ b/src/app/components/applicant/create-applicant/create-applicant.component.html
@@ -17,21 +17,21 @@
     </tr>
   </thead>
   <tbody>
-    <tr style="text-align:center" *ngFor="let employee of applicants">
+    <tr style="text-align:center" *ngFor="let applicant of applicants">
 
-      <td>{{employee.id}}</td>
-      <td>{{employee.firstName}}</td>
-      <td>{{employee.lastName}}</td>
-      <td>{{employee.email}}</td>
-      <td>{{employee.password}}</td>
-      <td>{{employee.nationalIdentity}}</td>
-      <td>{{employee.dateOfBirth}}</td>
-      <td>{{employee.about}}</td>
+      <td>{{applicant.id}}</td>
+      <td>{{applicant.firstName}}</td>
+      <td>{{applicant.lastName}}</td>
+      <td>{{applicant.email}}</td>
+      <td>{{applicant.password}}</td>
+      <td>{{applicant.nationalIdentity}}</td>
+      <td>{{applicant.dateOfBirth}}</td>
+      <td>{{applicant.about}}</td>
       <td>
         <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
           <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
-          <button type="button" class="btn btn-danger mx-3">Sil</button>
+          <button type="button" class="btn btn-danger mx-3" (click)="deleteApplicant(applicant)" >Sil</button>
         </div>
 
       </td>
