--- a/src/app/components/applicant/create-applicant/create-applicant.component.html
+++ b/src/app/components/applicant/create-applicant/create-applicant.component.html
@@ -30,7 +30,7 @@
       <td>
         <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
+          <button type="button" class="btn btn-secondary mx-3" routerLink="/update-applicant/{{applicant.id}}" >Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="deleteApplicant(applicant)" >Sil</button>
         </div>
 
