--- a/src/app/components/applicant/update-applicant/update-applicant.component.html
+++ b/src/app/components/applicant/update-applicant/update-applicant.component.html
@@ -33,7 +33,7 @@
                   <label for="exampleInputEmail1" class="form-label">Hakkında</label>
                   <input formControlName="about" type="text" class="form-control" placeholder="about" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-              <button  type="submit" class="btn btn-warning">Ekle</button>
+              <button  type="submit" (click)="update()" class="btn btn-warning">Güncelle</button>
               
             </form>
       </div>
