add-update-blacklist

--- a/src/app/components/black-list/create-black-list/create-black-list.component.html
+++ b/src/app/components/black-list/create-black-list/create-black-list.component.html
@@ -22,7 +22,7 @@
         <td>
           <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
+          <button type="button" class="btn btn-secondary mx-3" routerLink="/update-blacklist/:id">Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="deleteBlacklist(blacklist)">Sil</button>
           </div>
          
