--- a/src/app/components/instructor/create-instructor/create-instructor.component.html
+++ b/src/app/components/instructor/create-instructor/create-instructor.component.html
@@ -32,7 +32,8 @@
       <td>
         <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
+          <button type="button" class="btn btn-secondary mx-3"
+            routerLink="/update-instructor/{{instructor.id}}">Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="delete(instructor)">Sil</button>
         </div>
 
