--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
@@ -28,7 +28,7 @@
         <td>
           <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
+          <button type="button" class="btn btn-secondary mx-3" routerLink="/update-bootcamp/{{bootcamp.id}}">Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="delete(bootcamp)">Sil</button>
           </div>
          
