--- a/src/app/components/applicant/update-applicant/update-applicant.component.html
+++ b/src/app/components/applicant/update-applicant/update-applicant.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         
           <div class="col-md-6"></div>
-          <form [formGroup]="">
+          <form [formGroup]="applicantUpdateForm" *ngIf="applicant">
               <div class="mb-3">
                   <h2 class="text-center mt-2">Aday Güncelle</h2>
                 <label for="exampleInputEmail1" class="form-label">Ad</label>
