--- a/src/app/components/employee/create-employee/create-employee.component.html
+++ b/src/app/components/employee/create-employee/create-employee.component.html
@@ -31,7 +31,7 @@
       <td>
         <div>
           <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button type="button" class="btn btn-secondary mx-3">Düzenle</button>
+          <button type="button" class="btn btn-secondary mx-3" routerLink="/update-employee/{{employee.id}}">Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="delete(employee)">Sil</button>
         </div>
 
