add-blacklist-update

--- a/src/app/components/black-list/update-black-list/update-black-list.component.html
+++ b/src/app/components/black-list/update-black-list/update-black-list.component.html
@@ -1,16 +1,22 @@
 
 <div class="container">
+    <button class="btn btn-dark mt-3" routerLink="/blacklist">Geri Git</button>
+    
     <div class="row">
         <div class="col-md-6"></div>
-        <form [formGroup]="updateBlacklist">
+        <form [formGroup]="updateBlacklist" *ngIf="blacklist">
             <div class="mb-3">
                 <h2 class="text-center mt-3">Kara Listeyi Güncelle</h2>
               <label for="exampleInputEmail1" class="form-label">tarih</label>
               <input formControlName="date" type="text" class="form-control" placeholder="tarih" id="date" aria-describedby="date">
             </div>
             <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">applicantId</label>
+              <input formControlName="applicantId" type="text" class="form-control" placeholder="applicantId" id="applicantId" aria-describedby="reason">
+            </div>
+            <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Neden</label>
-                <input formControlName="reason" type="text" class="form-control" placeholder="lastName" id="reason" aria-describedby="reason">
+                <input formControlName="reason" type="text" class="form-control" placeholder="Neden" id="reason" aria-describedby="reason">
               </div>
             <button (click)="update()" type="submit" class="btn btn-warning">Güncelle</button>
           </form>
