edit routing and add detail components

--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -16,10 +16,10 @@
                     <a class="nav-link" href="#">Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Coaching</a>
+                    <a class="nav-link" routerLink="/login">Giriş Yap</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Analytics</a>
+                    <a class="nav-link" >Kayıt Ol</a>
                 </li>
                 
 
